--- a/acoustid_web/apps/main/templates/login.html
+++ b/acoustid_web/apps/main/templates/login.html
@@ -9,8 +9,8 @@
           Login page
       </p>
       <p>
+          <a href="{% url "social:begin" "musicbrainz" %}">MusicBrainz</a>
           <a href="{% url "social:begin" "google-oauth2" %}">Google</a>
-          <a href="{% url "social:begin" "github-oauth2" %}">GitHub</a>
       </p>
     </div>
   </section>
